--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
+
 spring.application.name=sso
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/ssotest
 spring.datasource.username=ssodev
-spring.datasource.password=sso2022ok
+spring.datasource.password=${DB_PASSWORD:sso2022ok}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
